# Google-Build-and-Blog-20k25

./: .gitignore  README.md
Googlehackathon BE/express-service/: .gitignore  Dockerfile  README.md  index.js  package.json  setup-env.js  test.js
Googlehackathon BE/fastapi-service/: .gitignore  README.md  pyproject.toml  requirements.txt
Googlehackathon BE/fastapi-service/multi_tool_agent/: agent.py
Googlehackathon FE/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
Googlehackathon FE/src/: App.tsx  index.css  vite-env.d.ts
Googlehackathon FE/src/components/: ChatBox.tsx  ControlPanel.tsx  MarkdownContent.tsx  SampleBrowser.tsx  SaveModal.tsx  SequencerGrid.tsx  TrackSettings.tsx
Googlehackathon FE/src/hooks/: useSequencer.ts
Googlehackathon FE/src/pages/: HomePage.tsx  StudioPage.tsx
Googlehackathon FE/src/services/: api.ts  chatService.ts  chatStreamingService.ts
test/: .env  audio_to_beats.py  beats.json  package-lock.json  test.py
